--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/RPG-Paper-Maker/Game#readme",
   "devDependencies": {
-    "electron": "^8.1.0"
+    "electron": "^8.1.0",
+    "three": "^0.122.0",
+    "three.js": "^0.77.1",
+    "typescript": "^4.1.2"
   },
   "build": {
     "appId": "your.id"
