--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron": "^8.1.0",
     "three": "^0.122.0",
     "three.js": "^0.77.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "esm": "^3.2.25"
   },
   "build": {
     "appId": "your.id"
