--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "esModuleInterop": true,
     "skipLibCheck": false,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./Content/Datas/Scripts/System"
+    "outDir": "./Content/Datas/Scripts/System",
+    "allowJs": true
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["./src"]
 }
