--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   },
   "env": {
     "ELECTRON_NO_ASAR": null
+  },
+  "dependencies": {
+    "@types/three": "^0.103.2",
+    "howler": "^2.2.1",
+    "three.js": "^0.77.1"
   }
 }
