--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ Content/Videos
 Content/Datas/*.json
 Content/Datas/Maps
 Content/Datas/Saves
-Content/Datas/Scripts/Plugins
+Content/Datas/Scripts/Plugins/*
 log.txt
 .idea
 
 #exept
-!Content/Datas/Scripts/Plugins/empty
+!Content/Datas/Scripts/Plugins/path.js
