--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ Content/Images
 Content/Shapes
 Content/Songs
 Content/Videos
+Content/Fonts
+Content/Styles
 Content/Datas/*.json
 Content/Datas/Maps
 Content/Datas/Saves
