--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/RPG-Paper-Maker/Game#readme",
   "devDependencies": {
     "@types/howler": "^2.2.1",
-    "better-docs": "^2.3.2",
+    "better-docs": "^1.2.2",
     "electron": ">=9.4.0",
     "pixi-webdoc-template": "^1.1.4",
     "react": "^16.0.0",
@@ -36,12 +36,14 @@
   },
   "dependencies": {
     "@types/node": "^14.14.16",
-    "@types/three": "^0.103.2",
-    "howler": "^2.2.1",
-    "three.js": "^0.77.1",
+    "@types/three": "^0.130.1",
+    "@webdoc/cli": "^1.0.0",
     "@webdoc/model": "1.1.3",
-    "@webdoc/types": "1.1.3",
     "@webdoc/template-library": "1.1.3",
-    "@webdoc/cli": "^1.0.0"
+    "@webdoc/types": "1.1.3",
+    "howler": "^2.2.1",
+    "npm": "^7.20.3",
+    "three": "^0.131.3",
+    "three.js": "^0.77.0"
   }
 }
