--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,12 +17,12 @@ jobs:
           node-version: 14
 
       - name: Setup enviroment
-        run: mkdir ./Scripts
+        run: mkdir -p ./Content/Datas/Scripts/
 
       - name: Setup Git & Pull changes
-        working-directory: ./Scripts
+        working-directory: ./Content/Datas/Scripts/
         run: |
-         git clone https://Wano-k:${{ secrets.GIT_TOKEN }}@github.com/RPG-Paper-Maker/Game-Scripts-Build.git" ./
+         git clone "https://Wano-k:${{ secrets.GIT_TOKEN }}@github.com/RPG-Paper-Maker/Game-Scripts-Build.git" ./
          git config --local user.name "PaperMaker-Bot"
          git config --local user.email "PaperMaker-bot@users.noreply.github.com"
          git checkout develop
@@ -31,22 +31,22 @@ jobs:
         run: |
           npm install
           npm install typescript
-          npm run compile
+          npm run build
   
       - name: Commit changes
-        working-directory: ./Scripts
+        working-directory: ./Content/Datas/Scripts/
         continue-on-error: true
         run: |
          git add .
          git commit -m "Nightly - ${{ github.repository }}@${{ github.sha }}"
 
       - name: Push changes
-        working-directory: ./Scripts
+        working-directory: ./Content/Datas/Scripts/
         run: git push origin develop
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: Scripts
-          path: Scripts/
+          path: ./Content/Datas/Scripts/
 
