--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build Contents
+name: Build Contents Release
 
 on:
   release:
@@ -16,12 +16,12 @@ jobs:
           node-version: 14
 
       - name: Setup enviroment
-        run: mkdir ./Scripts 
+        run: mkdir -p ./Content/Datas/Scripts/
 
       - name: Setup Git & Pull changes
-        working-directory: ./Scripts
+        working-directory: ./Content/Datas/Scripts/
         run: |
-         git clone https://Wano-k:${{ secrets.GIT_TOKEN }}@github.com/RPG-Paper-Maker/Game-Scripts-Build.git" ./
+         git clone "https://Wano-k:${{ secrets.GIT_TOKEN }}@github.com/RPG-Paper-Maker/Game-Scripts-Build.git" ./
          git config --local user.name "PaperMaker-Bot"
          git config --local user.email "PaperMaker-bot@users.noreply.github.com"
          git checkout master
@@ -30,22 +30,22 @@ jobs:
         run: |
           npm install
           npm install typescript
-          npm run compile
+          npm run build
   
       - name: Commit changes
-        working-directory: ./Scripts
+        working-directory: ./Content/Datas/Scripts/
         continue-on-error: true
         run: |
          git add .
          git commit -m "Release - ${{ github.repository }}@${{ github.sha }}"
 
       - name: Push changes
-        working-directory: ./Scripts
-        run: git push origin develop
+        working-directory: ./Content/Datas/Scripts/
+        run: git push origin master
       
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Content
-          path: Content/
+          name: Scripts
+          path: ./Content/Datas/Scripts/
 
