--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   "homepage": "https://github.com/RPG-Paper-Maker/Game#readme",
   "devDependencies": {
     "@types/howler": "^2.2.1",
-    "better-docs": "^1.2.2",
-    "electron": ">=9.4.0",
+    "electron": "9.4.0",
+    "nodemon": "^2.0.12",
     "pixi-webdoc-template": "^1.1.4",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "nodemon": "^2.0.12"
+    "react-dom": "^16.0.0"
   },
   "build": {
     "appId": "your.id"
@@ -46,7 +45,6 @@
     "@webdoc/types": "1.1.3",
     "howler": "^2.2.1",
     "npm": "^7.20.3",
-    "three": "^0.131.3",
-    "three.js": "^0.77.0"
+    "three": "^0.131.3"
   }
 }
